[package]
name = "tgrustpanels"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
once_cell = "1.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
warp = "0.3.7"
futures = "0.3.30"
sha2 = "0.10.8"
sha3 = "0.10.8"
ethnum = "1.5.0"
k256 = "0.13.2"
hex = "0.4"
arrayref = "0.3.7"
bs58 = "0.5.0"
reqwest = { version = "0.12.5", features = ["json"] }
bytes = "1"
# qrcode = "0.14.1"
# image = "0.25.1"

[dependencies.redis]
version = "*"
